1998-09-19  Yo Ric Dude  <ericmit@ix.netcom.com>

	* AUTHORS: decided to add my own name to the file, so people can
 	blame me a little more directly
	* Makefile.am: added optional building of esdplay.  
	* configure.in: added optional building of esdplay based on
 	whether or not -laudiofile is found.  made several "artistic"
 	changes to configure.in.  also added feedback about the expected
 	failure of the various audio header and lib tests.  hopefully
 	people won't think their system is horribly broken if not all of
 	the tests pass.
	* esdplay.c: added Simon Kagedal's auto format sniffing player for
 	esd, requires the audiofile library, which is in gnome cvs)

	* audio.c, esd.c, esd.h, esdcat.c, esdloop.c, esdmon.c, esdrec.c,
	esdsample.c, mix.c, players.c: allow different server rates, too.

	* esd-server.h, esd.c, mix.c, players.c: started the 8 bit server 
	overhaul.  many off by *2,/2 errors remain.  still straightening out 
	buf_size_samples vs. buf_size_octets issues... 16bit seems to work.

1998-09-05  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.c, mix.c, esd-server.h: fixed the annoying buzz while monitoring

1998-08-28  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_alsa.c: Nick Lopez - added the missing audio_alsa.c

1998-08-09  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_irix.c: Kimball Thurston - corrections for irix.

	* audio_hpux.c: Dave Glowacki - corrections for hpux and {esdcat,rec,mon}

	* Makefile.am, acconfig.h, audio.c, configure.in: Nick Lopez - added
	support for the Advanced Linux Sound Architecture. It seems to work 
	just fine on my SB16 with ALSA driver 0.1.4 and lib 0.0.9.
	still needs audio_alsa.c.
	
	* AUTHORS: updated list of contributors

	* Makefile.am, acconfig.h, audio.c, configure.in, esd-server.h:
	Jeff Dubrule - updated for MkLinux (still need to merge in mix.c)

1998-08-08  Mandrake <mandrake@mandrake.net>
	* fixed Makefile.am to use libtool's versioning correctly :)
