@@ -1,3 +1,9 @@
+1998-09-20  Yo Ric Dude  <ericmit@ix.netcom.com>
+
+	* esd.c, mix.c, samples.c: i think i've got the 8bit stuff working,
+	but it needs to be cleaned up, and preferably use function pointers 
+	over if-else blocks to pick the appropriate 8bit/16bit algorithms.
+
 1998-09-19  Yo Ric Dude  <ericmit@ix.netcom.com>
 
 	* AUTHORS: decided to add my own name to the file, so people can
